kubernetes/ingress.yaml
apiVersion: extensions/v2beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  backend:
    serviceName: nginx-service
    servicePort: 80
